automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -250,7 +250,7 @@
     "    x=initial_sample_budgets,\n",
     "    y=attendance_values,\n",
     ")\n",
-    "\n",
+    "type(trace_of)\n",
     "plotly.offline.iplot([trace_of_attendance_with_friends])"
    ]
   },
