automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -184,19 +184,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/conda/lib/python3.6/importlib/_bootstrap.py:219: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
-      "  return f(*args, **kwds)\n",
-      "/opt/conda/lib/python3.6/importlib/_bootstrap.py:219: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
-      "  return f(*args, **kwds)\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -215,7 +205,7 @@
        "data": [
         {
          "type": "scatter",
-         "uid": "2314a902-cbe9-11e8-9253-0242ac11002f",
+         "uid": "baf1dbfe-cbea-11e8-9253-0242ac11002f",
          "x": [
           0,
           50,
@@ -231,10 +221,10 @@
        "layout": {}
       },
       "text/html": [
-       "<div id=\"6d049fbc-c9ea-48aa-9db5-4902d50b3bd9\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"6d049fbc-c9ea-48aa-9db5-4902d50b3bd9\", [{\"x\": [0, 50, 100], \"y\": [20, 95, 170], \"type\": \"scatter\", \"uid\": \"23399e42-cbe9-11e8-9253-0242ac11002f\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"32832d01-688f-4962-83ef-1c9c6ef1a11c\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"32832d01-688f-4962-83ef-1c9c6ef1a11c\", [{\"x\": [0, 50, 100], \"y\": [20, 95, 170], \"type\": \"scatter\", \"uid\": \"baf758e0-cbea-11e8-9253-0242ac11002f\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"6d049fbc-c9ea-48aa-9db5-4902d50b3bd9\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"6d049fbc-c9ea-48aa-9db5-4902d50b3bd9\", [{\"x\": [0, 50, 100], \"y\": [20, 95, 170], \"type\": \"scatter\", \"uid\": \"23399e42-cbe9-11e8-9253-0242ac11002f\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"32832d01-688f-4962-83ef-1c9c6ef1a11c\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"32832d01-688f-4962-83ef-1c9c6ef1a11c\", [{\"x\": [0, 50, 100], \"y\": [20, 95, 170], \"type\": \"scatter\", \"uid\": \"baf758e0-cbea-11e8-9253-0242ac11002f\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
@@ -250,7 +240,7 @@
     "    x=initial_sample_budgets,\n",
     "    y=attendance_values,\n",
     ")\n",
-    "type(trace_of)\n",
+    "type(trace_of_attendance_with_friends)\n",
     "plotly.offline.iplot([trace_of_attendance_with_friends])"
    ]
   },
