automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -200,12 +200,19 @@
      "output_type": "display_data"
     },
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'plotly.graph_objs._scatter.Scatter'>\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.plotly.v1+json": {
        "data": [
         {
          "type": "scatter",
-         "uid": "baf1dbfe-cbea-11e8-9253-0242ac11002f",
+         "uid": "c0e88bc0-cbea-11e8-9253-0242ac11002f",
          "x": [
           0,
           50,
@@ -221,10 +228,10 @@
        "layout": {}
       },
       "text/html": [
-       "<div id=\"32832d01-688f-4962-83ef-1c9c6ef1a11c\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"32832d01-688f-4962-83ef-1c9c6ef1a11c\", [{\"x\": [0, 50, 100], \"y\": [20, 95, 170], \"type\": \"scatter\", \"uid\": \"baf758e0-cbea-11e8-9253-0242ac11002f\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"ae9877e5-1f61-48c7-be92-f8a73eccc2b2\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"ae9877e5-1f61-48c7-be92-f8a73eccc2b2\", [{\"x\": [0, 50, 100], \"y\": [20, 95, 170], \"type\": \"scatter\", \"uid\": \"c0f24192-cbea-11e8-9253-0242ac11002f\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"32832d01-688f-4962-83ef-1c9c6ef1a11c\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"32832d01-688f-4962-83ef-1c9c6ef1a11c\", [{\"x\": [0, 50, 100], \"y\": [20, 95, 170], \"type\": \"scatter\", \"uid\": \"baf758e0-cbea-11e8-9253-0242ac11002f\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"ae9877e5-1f61-48c7-be92-f8a73eccc2b2\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"ae9877e5-1f61-48c7-be92-f8a73eccc2b2\", [{\"x\": [0, 50, 100], \"y\": [20, 95, 170], \"type\": \"scatter\", \"uid\": \"c0f24192-cbea-11e8-9253-0242ac11002f\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
@@ -240,7 +247,7 @@
     "    x=initial_sample_budgets,\n",
     "    y=attendance_values,\n",
     ")\n",
-    "type(trace_of_attendance_with_friends)\n",
+    "print(type(trace_of_attendance_with_friends))\n",
     "plotly.offline.iplot([trace_of_attendance_with_friends])"
    ]
   },
